# slicegerp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
benchmarks/: RESULTS.md  RESULTS_SCALED.md  RESULTS_V2.md  RESULTS_V2_HELDOUT.md  RESULTS_V3.md  RESULTS_V3_HELDOUT.md  RESULTS_V4.md  RESULTS_V5.md  bench.py  bench2.py  bench3.py  bench4.py  bench5.py  bench6.py  exclude_all.json  exclude_dev.json  results.json  results_CONFIRM2_a.json  results_CONFIRM2_b.json  results_CONFIRM2_c.json  results_cfgA_991.json  results_cfgA_992.json  results_cfgA_993.json  results_cfgB_991.json  results_cfgB_992.json  results_cfgB_993.json  results_confirm_a.json  results_confirm_b.json  results_dense_991.json  results_dense_992.json  results_dense_993.json  results_final_a.json  results_final_b.json  results_final_c.json  results_learned_991.json  results_learned_992.json  results_learned_993.json  results_region_991.json  results_region_992.json  results_region_993.json  (+28 more)
docs/: PUBLISHING.md
src/slicegrep/: __init__.py  __main__.py  cli.py  core.py  mcp_server.py
tests/: test_cli.py  test_core.py
