[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slicegrep"
version = "0.5.0"
description = "grep that returns ranked, token-budgeted code slices for LLMs and coding agents"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "grep", "search", "llm", "agent", "code-search", "mcp",
    "context", "token-budget", "rag", "coding-agent", "claude",
]
authors = [{ name = "Samantha Maria" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = []  # core is standard-library only, on purpose

[project.optional-dependencies]
mcp = ["mcp>=1.2.0; python_version >= '3.10'"]
dev = ["pytest>=7", "pytest-cov"]
bench = ["jedi>=0.19"]

[project.scripts]
slicegrep = "slicegrep.cli:main"
fr = "slicegrep.cli:main"
slicegrep-mcp = "slicegrep.mcp_server:main"

[project.urls]
Homepage = "https://github.com/haxo98098/slicegerp"
Repository = "https://github.com/haxo98098/slicegerp"
Issues = "https://github.com/haxo98098/slicegerp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/slicegrep"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
